# zut

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  tools.py
0-todo/: bulkload.py
docs/: api-reference.rst  conf.py  index.md  requirements.txt  tips.md
docs/static/examples/: tests.conf
docs/templates/: custom-module-template.rst
tests/: __init__.py  test_commands.py  test_convert.py  test_csv.py  test_excel.py  test_files.py  test_json.py  test_numbers.py  test_output.py  test_text.py  test_time.py  test_urls.py
tests/db/: base.py  test_mssql.py  test_mysql.py  test_pg.py  test_pg2.py
tests/docker/: Dockerfile
tests/samples/: colors-and-formulas.xlsx  empty-table.xlsx  la-rose.csv  manual-lessrows.xlsx  mixed-mysql.csv  mixed-noheaders.csv  mixed-nullval.csv  mixed.csv  utf8_bom.csv
zut/: __init__.py  excel.py  files.py
zut/db/: __init__.py  base.py  mssql.py  mysql.py  pg.py  pg2.py
